# backend

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
.github/workflows/: build-and-push.yaml
migrations/2023-05-09-235613_test/: up.sql
migrations/2023-05-10-224414_initial/: down.sql  up.sql
migrations/2023-05-11-195936_add_missing_refresh_token/: down.sql  up.sql
migrations/2023-05-15-230735_fix_up_price_creation_date/: down.sql  up.sql
migrations/2023-05-16-232956_add_missing_fields_to_product_history/: down.sql  up.sql
migrations/2023-05-17-000935_fix_pk_user_product_history/: down.sql  up.sql
migrations/2023-05-22-170957_migrate_everything_to_timestamp/: down.sql  up.sql
migrations/2023-05-22-185208_fix_product_stores/: down.sql  up.sql
migrations/2023-05-22-185649_fix_product_store_prices/: down.sql  up.sql
migrations/2023-05-25-001958_add_missing_fk_to_user_product_history/: down.sql  up.sql
migrations/2023-05-27-025740_replace_pk_in_users_cart/: down.sql  up.sql
migrations/2023-05-27-040405_make_prev_price_null/: down.sql  up.sql
src/: errors.rs  handlers.rs  main.rs  schema.rs
src/api/: account_controller.rs  cart_controller.rs  category_controller.rs  history_controller.rs  mod.rs  ping_controller.rs  product_controller.rs
src/config/: app.rs  db.rs
src/middlewares/: jwt_middleware.rs  mod.rs
src/models/: category.rs  mod.rs  product.rs  response.rs  store.rs  user.rs  user_tokens.rs
src/services/: account_service.rs  cart_service.rs  category_service.rs  history_service.rs  mod.rs  product_service.rs
