[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"

actix-web = "4.3.1"

diesel = { version = "2.0.4", features = [ "postgres" ] }
deadpool-diesel = { version = "0.4.1", features = [ "postgres", "serde" ] }

derive_more = "0.99.17"

log = "0.4.17"
env_logger = "0.10.0"