[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"

actix-web = "4.3.1"
argon2 = "0.5.0"
actix-jwt-auth-middleware = "0.3.0"
jwt-compact = { version = "0.7.0", features = [ "exonum-crypto" ] }
exonum-crypto = { version = "1.0.0", default-features = false }

diesel = { version = "2.0.4", features = [ "postgres", "chrono" ] }
diesel_migrations = "2.0.0"
deadpool-diesel = { version = "0.4.1", features = [ "postgres", "serde" ] }

chrono = "0.4.24"
serde = "1.0.163"
serde_json = "1.0.96"

derive_more = "0.99.17"

log = "0.4.17"
env_logger = "0.10.0"