[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
dotenvy = "0.15.7"

actix-web = "4.3.1"
actix-cors = "0.6.4"
utoipa = { version = "3.3.0", features = [ "actix_extras", "chrono" ] }
utoipa-swagger-ui = { version = "3.1.3", features = [ "actix-web" ] }

argon2 = "0.5.0"
jsonwebtoken = "8.3.0"
rand = "0.8.5"

diesel = { version = "2.0.4", features = [ "postgres", "chrono" ] }
diesel_migrations = "2.0.0"
deadpool-diesel = { version = "0.4.1", features = [ "postgres", "serde" ] }

chrono = { version = "0.4.24", features = [ "serde" ] }
serde = "1.0.163"
serde_json = "1.0.96"

derive_more = "0.99.17"

log = "0.4.17"
env_logger = "0.10.0"